8009992: Prepare tracing of promotion failed for integration of evacuation failed Summary: Refactorisation to introduce CopyFaiedInfo that is used by PromotionFailedInfo and will be used by EvacuationFailedInfo as well Reviewed-by: ehelin, johnc, brutisso