src/share/vm/memory/defNewGeneration.cpp
@@ -735,7 +735,7 @@ void DefNewGeneration::handle_promotion_failure(oop old) {
                         old->size());
   }
   _promotion_failed = true;
-  _promotion_failed_info.register_promotion_failed(old->size());
+  _promotion_failed_info.register_copy_failure(old->size());
   preserve_mark_if_necessary(old, old->mark());
   // forward to self
   old->forward_to(old);
